# experiment-pipeline

./: .gitignore  main.py  pyproject.toml
AutogluonModels/ag-20250826_215856/: learner.pkl  metadata.json  predictor.pkl
AutogluonModels/ag-20250826_215856/models/: trainer.pkl
AutogluonModels/ag-20250826_215856/models/LightGBM/: model.pkl
AutogluonModels/ag-20250826_215856/models/LightGBMXT/: model.pkl
AutogluonModels/ag-20250826_215856/utils/attr/LightGBM/: y_pred_proba_val.pkl
AutogluonModels/ag-20250826_215856/utils/attr/LightGBMXT/: y_pred_proba_val.pkl
AutogluonModels/ag-20250826_215856/utils/data/: X_val.pkl  y.pkl
AutogluonModels/ag-20250826_220411/: learner.pkl  metadata.json
AutogluonModels/ag-20250826_220411/models/: trainer.pkl
AutogluonModels/ag-20250826_220411/models/LightGBM/: model.pkl
AutogluonModels/ag-20250826_220411/models/LightGBMXT/: model.pkl
AutogluonModels/ag-20250826_220411/utils/data/: y_val.pkl
configs/: data.yml  settings.yml
configs/cv/: sliding_window_3m_val_3m_gap_5_folds.yml
configs/models/: ag.yml  dummy.yml  rf.yml
data/raw/: baseline.csv  test.csv
src/: settings.py
src/models/: ag.py  base.py  catboost.py  dummy.py  lgbm.py  rf.py  xgboost.py
src/tasks/: base.py  train.py
src/tasks/preprocess/: __init__.py  features.py  ingest.py  split.py
src/utils/: preprocess.py  splitter.py
